Aplicando identity a la API

--- a/PDE.Api/appsettings.json
+++ b/PDE.Api/appsettings.json
@@ -9,5 +9,11 @@
   "ConnectionStrings": {
     "PDEContext": "Server=DESKTOP-35GKIRV;Database=db_PDE01;Trusted_Connection=True;MultipleActiveResultSets=true",
     "PadronContext": "Server=DESKTOP-35GKIRV;Database=dbPadron2024_20210917;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
+
+  "JWT": {
+    "ValidAudience": "http://localhost:4200",
+    "ValidIssuer": "http://localhost:5000",
+    "Secret": "JWTAuthenticationHIGHsecuredPasswordVVVp1OH7Xzyr"
   }
 }
