--- a/PDE.DataAccess/PDE.DataAccess.csproj
+++ b/PDE.DataAccess/PDE.DataAccess.csproj
@@ -15,4 +15,8 @@
     <Folder Include="Migrations\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+  </ItemGroup>
+
 </Project>
