Aplicando la seguridad a la API

--- a/PDE.Api/appsettings.json
+++ b/PDE.Api/appsettings.json
@@ -12,8 +12,8 @@
   },
 
   "JWT": {
-    "ValidAudience": "http://localhost:4200",
-    "ValidIssuer": "http://localhost:5000",
+    "ValidAudience": "https://localhost:7295/",
+    "ValidIssuer": "https://localhost:7295/",
     "Secret": "JWTAuthenticationHIGHsecuredPasswordVVVp1OH7Xzyr"
   }
 }
