--- a/PDE.Web/appsettings.json
+++ b/PDE.Web/appsettings.json
@@ -9,5 +9,6 @@
   "ConnectionStrings": {
     //"PDEContext": "Server=DESKTOP-35GKIRV;Database=db_PDE01;Trusted_Connection=True;MultipleActiveResultSets=true",
     //"PadronContext": "Server=DESKTOP-35GKIRV;Database=dbPadron2024_20210917;Trusted_Connection=True;MultipleActiveResultSets=true"
-  }
+  },
+  "ApiBaseURI": "https://localhost:7295/"
 }
