cree app context, con acceso a el control de acceso dentro de la aplicacion, agrege configuracion para cors en la api

--- a/PDE.Web/appsettings.json
+++ b/PDE.Web/appsettings.json
@@ -7,8 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    //"PDEContext": "Server=DESKTOP-35GKIRV;Database=db_PDE01;Trusted_Connection=True;MultipleActiveResultSets=true",
-    //"PadronContext": "Server=DESKTOP-35GKIRV;Database=dbPadron2024_20210917;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "PDEContext": "Server=.;Database=db_PDE01;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "PadronContext": "Server=.;Database=dbPadron2024_20210917;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "ApiBaseURI": "https://localhost:7295/"
 }
