integre la web api con la aplicacion, configure la aplicacion para que corra de manera publica en la sub red de modo que se pueda debuggear en el mismo mobile android

--- a/PDE.Api/appsettings.json
+++ b/PDE.Api/appsettings.json
@@ -7,8 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "PDEContext": "Server=DERESIL-05\\SERVERSIL;Database=db_PDE01;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "PadronContext": "Server=DERESIL-05\\SERVERSIL;Database=dbPadron2024_20210917;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "PDEContext": "Server=DESKTOP-GKPFVT3;Database=db_PDE01;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "PadronContext": "Server=DESKTOP-GKPFVT3;Database=dbPadron2024_20210917;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
 
   "JWT": {
