--- a/PDE.Api/Properties/launchSettings.json
+++ b/PDE.Api/Properties/launchSettings.json
@@ -13,8 +13,8 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7295;http://localhost:5295",
+      //"launchUrl": "swagger",
+      "applicationUrl": "http://10.0.0.8:5050",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
