configure la api para que pueda ser llamada como 'localhost' y no de error con la parte web

--- a/PDE.Api/appsettings.json
+++ b/PDE.Api/appsettings.json
@@ -12,8 +12,8 @@
   },
 
   "JWT": {
-    "ValidAudience": "https://localhost:7295/",
-    "ValidIssuer": "https://localhost:7295/",
+    "ValidAudience": "http://localhost:5295/",
+    "ValidIssuer": "http://localhost:5295/",
     "Secret": "JWTAuthenticationHIGHsecuredPasswordVVVp1OH7Xzyr"
   }
 }
