--- a/PDE.Api/Properties/launchSettings.json
+++ b/PDE.Api/Properties/launchSettings.json
@@ -14,7 +14,7 @@
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "http://10.0.0.8:5295",
+      "applicationUrl": "http://10.0.0.8:5295;http://localhost:5295",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
