--- a/PDE.Web/appsettings.json
+++ b/PDE.Web/appsettings.json
@@ -10,5 +10,5 @@
     "PDEContext": "Server=DESKTOP-GKPFVT3;Database=db_PDE01;Trusted_Connection=True;MultipleActiveResultSets=true",
     "PadronContext": "Server=DESKTOP-GKPFVT3;Database=dbPadron2024_20210917;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
-  "ApiBaseURI": "https://localhost:7295/"
+  "ApiBaseURI": "http://localhost:5295/"
 }
