--- a/PDE.Mobile/package.json
+++ b/PDE.Mobile/package.json
@@ -11,20 +11,24 @@
   },
   "dependencies": {
     "@expo/webpack-config": "~0.16.2",
+    "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/drawer": "^6.4.1",
+    "@react-navigation/material-bottom-tabs": "^6.2.1",
     "@react-navigation/native": "^6.0.10",
+    "@react-navigation/stack": "^6.2.1",
     "axios": "^0.27.2",
     "expo": "~45.0.0",
     "expo-status-bar": "~1.3.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
+    "react-native-gesture-handler": "~2.2.1",
+    "react-native-paper": "^4.12.1",
+    "react-native-reanimated": "~2.8.0",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
     "react-native-web": "0.17.7",
-    "webpack-dev-server": "^4.9.1",
-    "react-native-reanimated": "~2.8.0",
-    "react-native-gesture-handler": "~2.2.1"
+    "webpack-dev-server": "^4.9.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
