--- a/PDE.Api/appsettings.json
+++ b/PDE.Api/appsettings.json
@@ -7,8 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "PDEContext": "Server=DERESIL-05\\SERVERSIL;Database=db_PDE01;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "PadronContext": "Server=DERESIL-05\\SERVERSIL;Database=dbPadron2024_20210917;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "PDEContext": "Server=10.0.0.9;User ID=sa;Password=Masterxp01;Database=db_PDE01;Trusted_Connection=True;MultipleActiveResultSets=true;Integrated Security=False",
+    "PadronContext": "Server=10.0.0.9;User ID=sa;Password=Masterxp01;Database=dbPadron2024_20210917;Trusted_Connection=True;MultipleActiveResultSets=true;Integrated Security=False"
   },
 
   "JWT": {
